update logic for input board size

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>TIC TAC TOE</title>
   </head>
   <body>
+    <div id="setup-game">
+      <div>TicTacToe</div>
+      <button onclick="startGame()">Start</button>
+      <div>
+        <span
+          >Board Size : <input id="input-size" type="text" /> X
+          <input id="input-size-disable" disabled type="text" />
+        </span>
+      </div>
+    </div>
+
+    <div class="board"></div>
+
+    <!-- script -->
     <script src="./js/index.js"></script>
   </body>
 </html>
