refactoring code for setValueAndSize from input-size and add some styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="board"></div>
+    <div id="board"></div>
 
     <!-- script -->
     <script src="./js/index.js"></script>
