add font family games

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>TIC TAC TOE</title>
   </head>
   <body>
+    <!-- setup game page -->
     <div id="setup-game">
       <div>TicTacToe</div>
       <button onclick="startGame()">Start</button>
@@ -18,8 +19,8 @@
         </span>
       </div>
     </div>
-
-    <div id="board"></div>
+    <!-- in game page -->
+    <div id="board" style="display: none"></div>
 
     <!-- script -->
     <script src="./js/index.js"></script>
