add message turn player

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
     <!-- in game page -->
     <div id="in-game">
-      <div id="board"></div>
+      <div id="message" class="message">Player 1 Turn</div>
+      <div id="board" class="board"></div>
     </div>
 
     <!-- script -->
