add game over page html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
       <div id="board" class="board"></div>
     </div>
 
+    <div id="overlay" class="overlay">
+      <div>
+        <h1>Game Over</h1>
+        <div class="button-grid">
+          <button id="btn-reset" class="btn btn-reset">
+            <i class="fas fa-sync"></i> Reset
+          </button>
+          <button id="btn-exit" class="btn btn-exit">
+            <i class="fas fa-power-off"></i> Exit
+          </button>
+        </div>
+      </div>
+    </div>
+
     <!-- script -->
     <script src="./js/index.js"></script>
   </body>
