add styling for condition game over with overlay

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="in-game">
       <div id="board" class="board"></div>
     </div>
-
+    <!-- game over page -->
     <div id="overlay" class="overlay">
       <div>
         <h1>Game Over</h1>
