add action listener click and update some action from some condition in board

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <!-- in game page -->
-    <div id="message" class="message">Player 1 Turn</div>
+    <div id="message" class="message"></div>
 
     <div id="in-game">
       <div id="board" class="board"></div>
