--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
           <button id="btn-reset" class="btn btn-reset">
             <i class="fas fa-sync"></i> Reset
           </button>
-          <button id="btn-exit" class="btn btn-exit">
-            <i class="fas fa-power-off"></i> Exit
+          <button id="btn-try-again" class="btn btn-try-again">
+            <i class="fas fa-recycle"></i> Try Again
           </button>
         </div>
+        <button id="btn-exit" class="btn btn-exit">
+          <i class="fas fa-power-off"></i> Exit
+        </button>
       </div>
     </div>
 
