--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="shortcut icon"
+      href="https://image.flaticon.com/icons/png/512/806/806131.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>TIC TAC TOE</title>
   </head>
