--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://image.flaticon.com/icons/png/512/806/806131.png"
       type="image/x-icon"
     />
+    <link href="http://fonts.cdnfonts.com/css/games" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>TIC TAC TOE</title>
   </head>
